--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,15 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
-        <groupId>edu.stanford.swrl</groupId>
-        <artifactId>swrlapi-drools-engine</artifactId>
-        <version>2.0.8</version>
-    </dependency>
+            <groupId>edu.stanford.swrl</groupId>
+            <artifactId>swrlapi-drools-engine</artifactId>
+            <version>2.0.8</version>
+        </dependency>
         <dependency>
-            <groupId>org.processing</groupId>
-            <artifactId>core</artifactId>
-            <version>3.3.7</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 
